objects/Partner_Inquiry__c/Partner_Inquiry__c.object-meta.xml
<CustomObject>
    <description>Partner Portal 2020-02-12:  A form will be accessible from new WebI Portal for potential new partners to submit their contact and interest.  Partner Inquiry object will receive the form data.</description>
    <label>Partner Inquiry</label>
    <nameField>
        <displayFormat>PI-{00000}</displayFormat>
        <label>Partner Inquiry Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Inquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>