objects/Partner_Inquiry__c/fields/Approval_Flow_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Flow_Status__c</fullName>
    <defaultValue>&quot;Approvals not started&quot;</defaultValue>
    <label>Approval Flow Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approvals not started</fullName>
            </value>
            <value>
                <fullName>Approvals in progress</fullName>
            </value>
            <value>
                <fullName>Approvals complete</fullName>
            </value>
            <value>
                <fullName>Approver rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>