objects/Partner_Inquiry__c/fields/Approximate_Total_Number_Customers__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Total_Number_Customers__c</fullName>
    <label>Approximate Total Number Customers</label>
    <type>TextArea</type>
</CustomField>