objects/Partner_Inquiry__c/fields/Assign_PDD_CAD_Override__c.field-meta.xml
<CustomField>
    <fullName>Assign_PDD_CAD_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>PDD/CAD Assignment Rules will not run if selected.</inlineHelpText>
    <label>DEPRECATED - Assign PDD/CAD Override</label>
    <type>Checkbox</type>
</CustomField>