objects/Partner_Inquiry__c/fields/Average_Deal_Size_in__c.field-meta.xml
<CustomField>
    <fullName>Average_Deal_Size_in__c</fullName>
    <label>Average Deal Size (in $)</label>
    <type>TextArea</type>
</CustomField>