objects/Partner_Inquiry__c/fields/Brief_Overview__c.field-meta.xml
<CustomField>
    <fullName>Brief_Overview__c</fullName>
    <label>Brief Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>