objects/Partner_Inquiry__c/fields/Company_director_has_gov_relation__c.field-meta.xml
<CustomField>
    <fullName>Company_director_has_gov_relation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Company director(s) has gov relation</description>
    <inlineHelpText>Does any current or former director or executive officer of your company, or any employee of your company who will be involved with Tanium business, have a have a family relationship or other close relationship with a Government Official?</inlineHelpText>
    <label>Company director(s) has gov relation</label>
    <type>Checkbox</type>
</CustomField>