objects/Partner_Inquiry__c/fields/Customer_Buying_Center__c.field-meta.xml
<CustomField>
    <fullName>Customer_Buying_Center__c</fullName>
    <label>Customer Buying Center</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Buying_Center</valueSetName>
    </valueSet>
</CustomField>