objects/Partner_Inquiry__c/fields/Customize_Rejection_Email__c.field-meta.xml
<CustomField>
    <fullName>Customize_Rejection_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case 47260 If selected, rejection emails will not be sent.</description>
    <inlineHelpText>If selected, rejection emails will not be sent.</inlineHelpText>
    <label>Customize Rejection Email?</label>
    <type>Checkbox</type>
</CustomField>