objects/Partner_Inquiry__c/fields/Date_Approved_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_Enrollment__c</fullName>
    <label>Date Approved Enrollment</label>
    <type>DateTime</type>
</CustomField>