objects/Partner_Inquiry__c/fields/Date_Approved_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_Inquiry__c</fullName>
    <label>Date Approved Inquiry</label>
    <type>DateTime</type>
</CustomField>