objects/Partner_Inquiry__c/fields/Date_Rejected_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Date_Rejected_Enrollment__c</fullName>
    <label>Date Rejected Enrollment</label>
    <type>DateTime</type>
</CustomField>