objects/Partner_Inquiry__c/fields/Date_Rejected_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Date_Rejected_Inquiry__c</fullName>
    <label>Date Rejected Inquiry</label>
    <type>DateTime</type>
</CustomField>