objects/Partner_Inquiry__c/fields/ddq_Anti_corrupt_Policy_Procedures_Desc__c.field-meta.xml
<CustomField>
    <fullName>ddq_Anti_corrupt_Policy_Procedures_Desc__c</fullName>
    <description>Describe your company’s anti-corruption policies and procedures.</description>
    <inlineHelpText>Describe your company’s anti-corruption policies and procedures.</inlineHelpText>
    <label>Anti-corrupt Policy and Procedures Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>