objects/Partner_Inquiry__c/fields/ddq_Investigation_Description__c.field-meta.xml
<CustomField>
    <fullName>ddq_Investigation_Description__c</fullName>
    <description>Provide description if your business or any of its employees, officers or directors has ever been the subject of any investigations, accusations, proceedings, claims, demands or proceedings involving bribery, fraud, or corruption issues.</description>
    <inlineHelpText>Provide description if your business or any of its employees, officers or directors has ever been the subject of any investigations, accusations, proceedings, claims, demands or proceedings involving bribery, fraud, or corruption issues.</inlineHelpText>
    <label>Investigation Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>