objects/Partner_Inquiry__c/fields/ddq_List_Cur_Former_Staff_Rel_Govt_Off__c.field-meta.xml
<CustomField>
    <fullName>ddq_List_Cur_Former_Staff_Rel_Govt_Off__c</fullName>
    <description>List current or former employee, officer, or director of your company who has a close or familiar relationship with a Government Official.</description>
    <inlineHelpText>List current or former employee, officer, or director of your company who has a close or familiar relationship with a Government Official.</inlineHelpText>
    <label>List Current/Former Staff w Rel Govt Off</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>