objects/Partner_Inquiry__c/fields/ddq_List_Current_and_Former_Directors__c.field-meta.xml
<CustomField>
    <fullName>ddq_List_Current_and_Former_Directors__c</fullName>
    <description>Name all current and former directors, officers, and/or company principals.</description>
    <inlineHelpText>Name all current and former directors, officers, and/or company principals.</inlineHelpText>
    <label>List Current and Former Directors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>