objects/Partner_Inquiry__c/fields/ddq_List_CurrentFormer_Staff_Govt_Off__c.field-meta.xml
<CustomField>
    <fullName>ddq_List_CurrentFormer_Staff_Govt_Off__c</fullName>
    <description>List any current or former employee, officer, or director of your company, who is a Government Official.</description>
    <inlineHelpText>List any current or former employee, officer, or director of your company, who is a Government Official.</inlineHelpText>
    <label>List Current/Former Staff Govt Official</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>