objects/Partner_Inquiry__c/fields/ddq_List_Other_Names_Or_Aliases__c.field-meta.xml
<CustomField>
    <fullName>ddq_List_Other_Names_Or_Aliases__c</fullName>
    <description>If the company operated under any other names or aliases during the last 5 years, please list the info.</description>
    <inlineHelpText>If the company operated under any other names or aliases during the last 5 years, please list the info.</inlineHelpText>
    <label>List Other Names Or Aliases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>