objects/Partner_Inquiry__c/fields/ddq_List_Public_Officials_Ownership_Int__c.field-meta.xml
<CustomField>
    <fullName>ddq_List_Public_Officials_Ownership_Int__c</fullName>
    <description>List all govt entity, candidate for public office, party official, or govt official, incl any employee of a govt-owned entity, any person acting for the govt or officer or employee of a public intl org who have an ownership interest in your company.</description>
    <inlineHelpText>List all govt entity, candidate for public office, party official, or govt official, incl any employee of a govt-owned entity, any person acting for the govt or officer or employee of a public intl org who have an ownership interest in your company.</inlineHelpText>
    <label>List Public Officials Ownership Int</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>