objects/Partner_Inquiry__c/fields/ddq_List_Shareholders_10_Fin_Int__c.field-meta.xml
<CustomField>
    <fullName>ddq_List_Shareholders_10_Fin_Int__c</fullName>
    <description>Name all shareholders or owners who hold (or have held) 10% or more financial interest in your company.</description>
    <inlineHelpText>Name all shareholders or owners who hold (or have held) 10% or more financial interest in your company.</inlineHelpText>
    <label>List Shareholders 10% Fin Int</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>