objects/Partner_Inquiry__c/fields/ddq_List_Subcontractors__c.field-meta.xml
<CustomField>
    <fullName>ddq_List_Subcontractors__c</fullName>
    <description>If you will be subcontracting, identify the other company or subcontractor and describe the part of the services it will perform.</description>
    <inlineHelpText>If you will be subcontracting, identify the other company or subcontractor and describe the part of the services it will perform.</inlineHelpText>
    <label>List Subcontractor(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>