objects/Partner_Inquiry__c/fields/ddq_Q_Close_Relationship_Govt_Official__c.field-meta.xml
<CustomField>
    <fullName>ddq_Q_Close_Relationship_Govt_Official__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does any current or former employee, officer, or director of your company have a close or familiar relationship with a Government Official?</description>
    <inlineHelpText>Does any current or former employee, officer, or director of your company have a close or familiar relationship with a Government Official?</inlineHelpText>
    <label>Close Relationship to Govt Official?</label>
    <type>Checkbox</type>
</CustomField>