objects/Partner_Inquiry__c/fields/ddq_Q_CurrentFormer_Staff_Govt_Official__c.field-meta.xml
<CustomField>
    <fullName>ddq_Q_CurrentFormer_Staff_Govt_Official__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is any current or former employee, officer, or director of your company, a Government Official?</description>
    <inlineHelpText>Is any current or former employee, officer, or director of your company, a Government Official?</inlineHelpText>
    <label>Current/Former Staff Govt Official?</label>
    <type>Checkbox</type>
</CustomField>