objects/Partner_Inquiry__c/fields/ddq_Q_Other_Names_Or_Aliases__c.field-meta.xml
<CustomField>
    <fullName>ddq_Q_Other_Names_Or_Aliases__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the company operated under any other names or aliases during the last 5 years?</description>
    <inlineHelpText>Has the company operated under any other names or aliases during the last 5 years?</inlineHelpText>
    <label>Other Names Or Aliases?</label>
    <type>Checkbox</type>
</CustomField>