objects/Partner_Inquiry__c/fields/ddq_Q_Subcontracts__c.field-meta.xml
<CustomField>
    <fullName>ddq_Q_Subcontracts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If you indicated earlier that you will be providing Tanium-focused services to customers, will any subsidiaries, affiliates or other group companies provide any part of the services or will you subcontract any part of the services to another company?</description>
    <inlineHelpText>If you indicated earlier that you will be providing Tanium-focused services to customers, will any subsidiaries, affiliates or other group companies provide any part of the services or will you subcontract any part of the services to another company?</inlineHelpText>
    <label>Subcontracts?</label>
    <type>Checkbox</type>
</CustomField>