objects/Partner_Inquiry__c/fields/ddq_Q_Written_anti_corruption_policy__c.field-meta.xml
<CustomField>
    <fullName>ddq_Q_Written_anti_corruption_policy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does your company have a written anti-corruption policy?</description>
    <inlineHelpText>Does your company have a written anti-corruption policy?</inlineHelpText>
    <label>Written anti-corruption policy?</label>
    <type>Checkbox</type>
</CustomField>