objects/Partner_Inquiry__c/fields/ddq_Violation_Criminal_Laws_Description__c.field-meta.xml
<CustomField>
    <fullName>ddq_Violation_Criminal_Laws_Description__c</fullName>
    <description>Provide description if your business or any of its employees, officers or directors ever been found guilty or convicted of a violation of any criminal laws.</description>
    <inlineHelpText>Provide description if your business or any of its employees, officers or directors ever been found guilty or convicted of a violation of any criminal laws.</inlineHelpText>
    <label>Violation Criminal Laws Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>