objects/Partner_Inquiry__c/fields/Describe_director_gov_relations__c.field-meta.xml
<CustomField>
    <fullName>Describe_director_gov_relations__c</fullName>
    <label>Describe all director gov relations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>