objects/Partner_Inquiry__c/fields/Director_Bribery_Fraud_Corrupt__c.field-meta.xml
<CustomField>
    <fullName>Director_Bribery_Fraud_Corrupt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Director/company bribery/fraud/corrupt</description>
    <inlineHelpText>Within the past ten years has your business, or any director or executive officer of your business, been the subject of any investigations, claims, demands or proceedings involving bribery, fraud, or corruption issues?</inlineHelpText>
    <label>Director/company bribery/fraud/corrupt</label>
    <type>Checkbox</type>
</CustomField>