objects/Partner_Inquiry__c/fields/Director_Bribery_Fraud_Corrupt_Descripti__c.field-meta.xml
<CustomField>
    <fullName>Director_Bribery_Fraud_Corrupt_Descripti__c</fullName>
    <description>Describe bribery/fraud/corruption</description>
    <label>Describe bribery/fraud/corruption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>