objects/Partner_Inquiry__c/fields/Director_Convicted_of_Crime__c.field-meta.xml
<CustomField>
    <fullName>Director_Convicted_of_Crime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Director(s) convicted/guilty of crime</description>
    <inlineHelpText>Has your business, or any directors or executive officers of your business, been found guilty or convicted of a violation of any criminal laws?</inlineHelpText>
    <label>Director(s) convicted/guilty of crime</label>
    <type>Checkbox</type>
</CustomField>