objects/Partner_Inquiry__c/fields/Director_Convicted_Verdict__c.field-meta.xml
<CustomField>
    <fullName>Director_Convicted_Verdict__c</fullName>
    <description>Describe convictions/guilty verdict(s)</description>
    <label>Describe convictions/guilty verdict(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>