objects/Partner_Inquiry__c/fields/Director_Disciplined_for_Misconduct__c.field-meta.xml
<CustomField>
    <fullName>Director_Disciplined_for_Misconduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Company director discipline/misconduct</description>
    <inlineHelpText>In the past ten years has your bus., or any dir. or exec. off. of your bus., been suspended/disqualified/debarred from doing bus. with any comp. or gov. ent., been under the review of a monitor/been determined to not be a responsible or qualified bidder?</inlineHelpText>
    <label>Company director discipline/misconduct</label>
    <type>Checkbox</type>
</CustomField>