objects/Partner_Inquiry__c/fields/Director_Misconduct_Description__c.field-meta.xml
<CustomField>
    <fullName>Director_Misconduct_Description__c</fullName>
    <description>Describe all instances of discipline</description>
    <label>Describe all instances of discipline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>