objects/Partner_Inquiry__c/fields/Enrollment_Approved__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrollment Approved</label>
    <type>Checkbox</type>
</CustomField>