objects/Partner_Inquiry__c/fields/Estimated_Closing_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Closing_Timeframe__c</fullName>
    <description>Partner Portal Prompt: What is the anticipated time to close?</description>
    <label>Expected Time to Close</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>This quarter</fullName>
            </value>
            <value>
                <fullName>Within 6 months</fullName>
            </value>
            <value>
                <fullName>Within a year</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>