objects/Partner_Inquiry__c/fields/Government_Ties_Director__c.field-meta.xml
<CustomField>
    <fullName>Government_Ties_Director__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Company director(s) has government role</description>
    <inlineHelpText>Does any current or former director or executive officer of your company, or any employee of your company who will be involved with Tanium business, have a role as a Government Official?</inlineHelpText>
    <label>Company director(s) has government role</label>
    <type>Checkbox</type>
</CustomField>