objects/Partner_Inquiry__c/fields/Government_Ties_Director_Description__c.field-meta.xml
<CustomField>
    <fullName>Government_Ties_Director_Description__c</fullName>
    <description>Describe all director government roles</description>
    <label>Describe all director government roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>