objects/Partner_Inquiry__c/fields/Government_Ties_Owner__c.field-meta.xml
<CustomField>
    <fullName>Government_Ties_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Company owner(s) has government ties</description>
    <inlineHelpText>Does any “Government Official” have an ownership interest in your company?</inlineHelpText>
    <label>Company owner(s) has government ties</label>
    <type>Checkbox</type>
</CustomField>