objects/Partner_Inquiry__c/fields/Government_Ties_Owner_Description__c.field-meta.xml
<CustomField>
    <fullName>Government_Ties_Owner_Description__c</fullName>
    <description>Describe instances of owner gov. ties</description>
    <label>Describe instances of owner gov. ties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>