objects/Partner_Inquiry__c/fields/HQ_Country__c.field-meta.xml
<CustomField>
    <fullName>HQ_Country__c</fullName>
    <label>HQ Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HQ_Country</valueSetName>
    </valueSet>
</CustomField>