objects/Partner_Inquiry__c/fields/Inquiry_Approved__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inquiry Approved</label>
    <type>Checkbox</type>
</CustomField>