objects/Partner_Inquiry__c/fields/Inquiry_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INC0121240 Jaclyn Woodward.  Checking box will set Partner Inquiry&apos;s Status to &quot;Inquiry Rejected&quot;, Approval Flow Status to &quot;Approver Rejected&quot; and send rejection emails.</description>
    <inlineHelpText>Checking box will set Partner Inquiry&apos;s Status to &quot;Inquiry Rejected&quot;, Approval Flow Status to &quot;Approver Rejected&quot; and send rejection emails if Customize Rejection Email? is not selected.</inlineHelpText>
    <label>Inquiry Rejected</label>
    <type>Checkbox</type>
</CustomField>