objects/Partner_Inquiry__c/fields/Mapped_Account__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If partner account already exist, please enter the info here.</inlineHelpText>
    <label>Mapped Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Inquiries</relationshipLabel>
    <relationshipName>Partner_Inquiries_Mapped_Account</relationshipName>
    <type>Lookup</type>
</CustomField>