objects/Partner_Inquiry__c/fields/Missing_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Missing_for_Approval__c</fullName>
    <formula>IF((TEXT(Status__c)) &lt;&gt; &quot;Inquiry Submitted&quot;, &quot;Partner Inquiry Status must be Inquiry Submitted. &quot;, &quot;&quot;) +
IF(ISBLANK(Business_Motion__c), &quot;No Business Motion selected. &quot;, &quot;&quot;) +
IF(ISBLANK(TEXT(Sales_Model__c)), &quot;No Purchase Model selected. &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please resolve displayed issues to enable Submit for Approval.</inlineHelpText>
    <label>Missing for Approval</label>
    <type>Text</type>
</CustomField>