objects/Partner_Inquiry__c/fields/Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Owner Manager, populated via flow.</description>
    <label>Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>