objects/Partner_Inquiry__c/fields/Partner_Enrollment_Timestamp_App_Start__c.field-meta.xml
<CustomField>
    <fullName>Partner_Enrollment_Timestamp_App_Start__c</fullName>
    <description>Approval Start</description>
    <label>Partner Enrollment Timestamp App Start</label>
    <type>DateTime</type>
</CustomField>