objects/Partner_Inquiry__c/fields/Partner_Enrollment_Timestamp_Credit_Chec__c.field-meta.xml
<CustomField>
    <fullName>Partner_Enrollment_Timestamp_Credit_Chec__c</fullName>
    <label>Partner Enrollment Timestamp Credit Chec</label>
    <type>DateTime</type>
</CustomField>