objects/Partner_Inquiry__c/fields/Partner_Enrollment_Timestamp_Partner_Ops__c.field-meta.xml
<CustomField>
    <fullName>Partner_Enrollment_Timestamp_Partner_Ops__c</fullName>
    <label>Partner Enrollment Timestamp Partner Ops</label>
    <type>DateTime</type>
</CustomField>