objects/Partner_Inquiry__c/fields/Partner_Geo_Region__c.field-meta.xml
<CustomField>
    <fullName>Partner_Geo_Region__c</fullName>
    <inlineHelpText>Only editable by Partner Portal Admin Users</inlineHelpText>
    <label>Partner Geo (Region)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>LatAm</fullName>
            </value>
            <value>
                <fullName>North Asia</fullName>
            </value>
            <value>
                <fullName>South Asia (Non-ANZ)</fullName>
            </value>
            <value>
                <fullName>US and Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>