objects/Partner_Inquiry__c/fields/Partner_Inquiry_18ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Inquiry_18ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Inquiry 18ID</label>
    <type>Text</type>
</CustomField>