objects/Partner_Inquiry__c/fields/Partner_Inquiry_Link__c.field-meta.xml
<CustomField>
    <fullName>Partner_Inquiry_Link__c</fullName>
    <description>[INC0160150] URL field to the Partner Inquiry object. This is being used for reporting purposes only. Not added in Pagelayout.</description>
    <formula>HYPERLINK(&quot;https://tanium.lightning.force.com/&quot;+Id,  First_Name__c  + &quot; &quot; +  Last_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Inquiry Link</label>
    <type>Text</type>
</CustomField>