objects/Partner_Inquiry__c/fields/Partner_Inquiry_Timestamp_App_Start__c.field-meta.xml
<CustomField>
    <fullName>Partner_Inquiry_Timestamp_App_Start__c</fullName>
    <label>Partner Inquiry Timestamp App Start</label>
    <type>DateTime</type>
</CustomField>