objects/Partner_Inquiry__c/fields/Partner_Inquiry_Timestamp_Level_1_Compl__c.field-meta.xml
<CustomField>
    <fullName>Partner_Inquiry_Timestamp_Level_1_Compl__c</fullName>
    <label>Partner Inquiry Timestamp Level 1 Compl</label>
    <type>DateTime</type>
</CustomField>