objects/Partner_Inquiry__c/fields/Partner_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Partner_Job_Role__c</fullName>
    <label>Partner Job Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Job_Role</valueSetName>
    </valueSet>
</CustomField>