objects/Partner_Inquiry__c/fields/Partner_Plans_To_Outsource__c.field-meta.xml
<CustomField>
    <fullName>Partner_Plans_To_Outsource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Partner requests/plans to outsource</description>
    <inlineHelpText>Do you plan to request permission for any subsidiaries, affiliates or other group companies to provide any part of the services under the proposed partnership with Tanium?</inlineHelpText>
    <label>Partner requests/plans to outsource</label>
    <type>Checkbox</type>
</CustomField>