objects/Partner_Inquiry__c/fields/Partner_Potential_Country_List__c.field-meta.xml
<CustomField>
    <fullName>Partner_Potential_Country_List__c</fullName>
    <description>Partner Potential Country List</description>
    <label>Partner Potential Country List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HQ_Country</valueSetName>
    </valueSet>
</CustomField>