objects/Partner_Inquiry__c/fields/Partner_Primary_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Primary_Point_of_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Partner Primary Point of Contact</description>
    <label>Partner Primary Point of Contact?</label>
    <type>Checkbox</type>
</CustomField>