objects/Partner_Inquiry__c/fields/Partner_Purchase_Method__c.field-meta.xml
<CustomField>
    <fullName>Partner_Purchase_Method__c</fullName>
    <description>Partner Portal Prompt:  Will your company be buying directly from Tanium or through a Distributor?</description>
    <inlineHelpText>Partner Portal Prompt:  Will your company be buying directly from Tanium or through a Distributor?</inlineHelpText>
    <label>Partner Purchase Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Through Distributor</fullName>
            </value>
            <value>
                <fullName>Not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>