objects/Partner_Inquiry__c/fields/Partner_Segment__c.field-meta.xml
<CustomField>
    <fullName>Partner_Segment__c</fullName>
    <description>Partner Portal Prompt:  Do you consider your organization more services or product sales led?</description>
    <inlineHelpText>Partner Portal Prompt:  Do you consider your organization more services or product sales led?</inlineHelpText>
    <label>Partner Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Segment</valueSetName>
    </valueSet>
</CustomField>