objects/Partner_Inquiry__c/fields/Partner_Services__c.field-meta.xml
<CustomField>
    <fullName>Partner_Services__c</fullName>
    <description>Partner Portal Prompt: Please describe the nature of Tanium-related services that will be provided to customers.</description>
    <inlineHelpText>Partner Portal Prompt Please describe the nature of Tanium-related services that will be provided to customers.</inlineHelpText>
    <label>Partner Services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>