objects/Partner_Inquiry__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <description>Partner Portal Prompt: Which of these best describes your organization &quot;type&quot; or route to market?</description>
    <label>Partner Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Type</valueSetName>
    </valueSet>
</CustomField>