objects/Partner_Inquiry__c/fields/Partner_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Partner_Vertical__c</fullName>
    <label>Partner Primary Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Vertical</valueSetName>
    </valueSet>
</CustomField>