objects/Partner_Inquiry__c/fields/Partnering_Goals__c.field-meta.xml
<CustomField>
    <fullName>Partnering_Goals__c</fullName>
    <label>Partnership Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>