objects/Partner_Inquiry__c/fields/PDD_CAD__c.field-meta.xml
<CustomField>
    <fullName>PDD_CAD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPRECATED - PDD/CAD</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Inquiries_PDD_CAD</relationshipName>
    <type>Lookup</type>
</CustomField>