objects/Partner_Inquiry__c/fields/PDD_CAD_Email_1__c.field-meta.xml
<CustomField>
    <fullName>PDD_CAD_Email_1__c</fullName>
    <label>DEPRECATED - PDD/CAD Email 1</label>
    <type>Email</type>
</CustomField>