objects/Partner_Inquiry__c/fields/PDD_CAD_Email_2__c.field-meta.xml
<CustomField>
    <fullName>PDD_CAD_Email_2__c</fullName>
    <label>DEPRECATED - PDD/CAD Email 2</label>
    <type>Email</type>
</CustomField>