objects/Partner_Inquiry__c/fields/PDD_CAD_Email_3__c.field-meta.xml
<CustomField>
    <fullName>PDD_CAD_Email_3__c</fullName>
    <label>DEPRECATED - PDD/CAD Email 3</label>
    <type>Email</type>
</CustomField>