objects/Partner_Inquiry__c/fields/Percent_Build__c.field-meta.xml
<CustomField>
    <fullName>Percent_Build__c</fullName>
    <description>Partner Inquiry:  Percent of partner business</description>
    <inlineHelpText>Partner Inquiry:  Percent of partner business</inlineHelpText>
    <label>Percent Build</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>